adding an enemy : tik tik